platform/chat-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend-deployment
  namespace: event-12
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
    spec:
      containers:
        - name: chat-backend
          image: krusonl.azurecr.io/chat-backend:sha-603efc3
          ports:
            - containerPort: 8000
