platform/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
      - name: node-red
        image: nodered/node-red:latest
        ports:
        - containerPort: 1880
