platform/chat-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: event-12
spec:
  selector:
    app: streamlit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
