platform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: event-12
spec:
  selector:
    app: node-red
  ports:
  - protocol: TCP
    port: 80
    targetPort: 1880
