platform/streamlit-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: test
spec:
  selector:
    app: streamlit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
