platform/chat-backend-virtualservice.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-backend-virtualservice
  namespace: test
spec:
  hosts:
    - "*"
  gateways:
    - node-red-gateway
  http:
    - match:
        - uri:
            prefix: /ws
      route:
        - destination:
            host: chat-backend-service
            port:
              number: 80
