platform/chat-frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: streamlit-virtualservice
  namespace: event-12
spec:
  hosts:
    - "kruso-event-12.lelos.xyz"
  gateways:
    - generic-gateway
  http:
    - match:
        - uri:
            prefix: /agenticgame
      route:
        - destination:
            host: streamlit-service
            port:
              number: 80
