platform/virtual-service.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: node-red
  namespace: test
spec:
  hosts:
  - "*"
  gateways:
  - node-red-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: node-red
        port:
          number: 80
